src/objects/Extended_Capture_Team_Members__c.object
<CustomObject>
    <fields>
        <fullName>Capture_Team__c</fullName>
        <label>Capture Team</label>
        <referenceTo>Capture_Team__c</referenceTo>
        <relationshipLabel>Extended Capture Team Members</relationshipLabel>
        <relationshipName>Extended_Capture_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>R5</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Extended Capture Team Members</relationshipLabel>
        <relationshipName>Extended_Capture_Team_Members</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Capture Team Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance, Tax Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tender Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Extended Capture Team Member</label>
    <nameField>
        <displayFormat>ECTM-{0000000}</displayFormat>
        <label>Extended Capture Team Members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extended Capture Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>